[package]
name = "luminance-gl"
version = "0.13.1"
license = "BSD-3-Clause"
authors = ["Dimitri 'phaazon' Sabadie <dimitri.sabadie@gmail.com>"]
description = "Deprecated, please use luminance instead"
keywords = ["stateless", "type-safe", "graphics", "luminance", "opengl"]

homepage = "https://github.com/phaazon/luminance-rs"
repository = "https://github.com/phaazon/luminance-rs"
documentation = "https://docs.rs/luminance-gl"

[badges]
maintenance = { status = "deprecated" }

[features]
default = ["gl33"]
gl33 = []

[dependencies]
gl = "0.5.2"
luminance = "0.16"
